[gd_scene load_steps=51 format=2]

[ext_resource path="res://Assets/Fonts/ScoreUI.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Sprites/Tileset.png" type="Texture" id=2]
[ext_resource path="res://Assets/Entities/Snow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/Ui/Player2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Ui/Player1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Crown.png" type="Texture" id=6]
[ext_resource path="res://Assets/Scripts/LooseScreen.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/Player.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Ui/musicOn.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Ui/information.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Ui/audioOff.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Ui/gamepad.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Mask.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sfx/Select.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Sprites/Ui/audioOn.png" type="Texture" id=16]
[ext_resource path="res://Assets/Scripts/Bug.gd" type="Script" id=17]
[ext_resource path="res://Assets/Sprites/Bug.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Lightmask.png" type="Texture" id=19]
[ext_resource path="res://Assets/Entities/Info.tscn" type="PackedScene" id=20]
[ext_resource path="res://Assets/Sprites/backdrop.png" type="Texture" id=21]
[ext_resource path="res://Assets/Entities/Controls.tscn" type="PackedScene" id=22]
[ext_resource path="res://Assets/Music/2019-12-11_-_Retro_Platforming_-_David_Fesliyan.mp3" type="AudioStream" id=23]

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 18 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 24, 18 )

[sub_resource type="OccluderPolygon2D" id=37]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=38]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=39]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=40]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=41]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=42]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=43]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=44]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=45]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=46]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=47]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=48]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=49]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=50]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=51]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=52]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=53]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=31]
0/name = "Tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 37 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 38 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 38 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 39 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 40 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 40 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 41 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 42 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 42 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Tileset.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 384, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 43 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 44 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 44 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Tileset.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 512, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/occluder = SubResource( 45 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 46 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 46 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Tileset.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 640, 0, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/occluder = SubResource( 47 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 48 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 48 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Tileset.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 768, 0, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/occluder = SubResource( 49 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 50 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 50 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Tileset.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 896, 0, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/occluder = SubResource( 51 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 52 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 52 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Tileset.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 1024, 0, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/occluder = SubResource( 53 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Tileset.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 1152, 0, 128, 128 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Tileset.png 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 1280, 0, 128, 128 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Off",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "On",
"speed": 5.0
} ]

[node name="LooseScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 180, 252 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="Sprite" parent="."]
position = Vector2( 1275, 518 )
scale = Vector2( 10.9262, 4.12 )
z_index = -3
texture = ExtResource( 21 )

[node name="FakePlayer1" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 642, 722.195 )
scale = Vector2( 0.619, 0.619 )
frames = SubResource( 33 )

[node name="FakePlayer2" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 540, 722.195 )
scale = Vector2( 0.619, 0.619 )
frames = SubResource( 36 )

[node name="Bugs" type="Node" parent="."]

[node name="Bug1" type="Area2D" parent="Bugs" groups=["Bug"]]
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 1368, 642 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug1"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 55 )
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug1"]
position = Vector2( 0, 6 )
shape = SubResource( 56 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug1"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 19 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.54902 )

[node name="Bug2" type="Area2D" parent="Bugs" groups=["Bug"]]
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 1446, 582 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug2"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 55 )
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug2"]
position = Vector2( 0, 6 )
shape = SubResource( 56 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug2"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 19 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.54902 )

[node name="Leaves" type="Node" parent="."]

[node name="Snow" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( -42, -222 )
z_index = -1

[node name="Snow2" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 240, -282 )
z_index = -1

[node name="Snow3" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 522, 54 )
z_index = -1

[node name="Snow4" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 858, -54 )
z_index = -1

[node name="Snow5" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 666, -78 )
z_index = -1

[node name="Snow6" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 114, 288 )
z_index = -1

[node name="Snow7" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 174, 174 )
z_index = -1

[node name="Snow8" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 318, -30 )
z_index = -1

[node name="Snow9" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 570, 300 )
z_index = -1

[node name="Snow10" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 408, -600 )
z_index = -1

[node name="Snow11" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 744, 336 )
z_index = -1

[node name="Snow12" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( -42, 270 )
z_index = -1

[node name="Snow13" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 960, 366 )
z_index = -1

[node name="Snow14" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 1104, 444 )
z_index = -1

[node name="Snow15" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 0, -714 )
z_index = -1

[node name="Snow16" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 396, -720 )
z_index = -1

[node name="Snow17" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 690, -732 )
z_index = -1

[node name="Snow18" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 1008, -666 )
z_index = -1

[node name="Snow19" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 816, -690 )
z_index = -1

[node name="Snow20" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 264, -324 )
z_index = -1

[node name="Snow21" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 270, -552 )
z_index = -1

[node name="Snow22" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 432, -402 )
z_index = -1

[node name="Snow23" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 666, -426 )
z_index = -1

[node name="Snow24" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 1038, -426 )
z_index = -1

[node name="Snow25" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 840, -390 )
z_index = -1

[node name="Snow26" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 264, -156 )
z_index = -1

[node name="Snow27" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 1026, -156 )
z_index = -1

[node name="Snow28" parent="Leaves" instance=ExtResource( 3 )]
position = Vector2( 1170, -78 )
z_index = -1

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( -90, 486 )
scale = Vector2( 0.4, 0.4 )
tile_set = SubResource( 31 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 262152, 3, 0, 262153, 0, 0, 262154, 6, 0, 327687, 3, 0, 327688, 0, 0, 327690, 0, 0, 327691, 1, 0, 327692, 0, 0, 327693, 0, 0, 327694, 1, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 6, 0, 393220, 3, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393225, 8, 0, 393228, 8, 0, 393232, 8, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 6, 0, 458754, 4, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 458763, 8, 0, 458764, 8, 0, 458765, 8, 0, 458766, 8, 0, 458767, 8, 0, 458768, 8, 0, 458769, 8, 0, 458770, 8, 0, 458771, 8, 0, 458772, 8, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 7, 0 )

[node name="Mask" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.196078 )
position = Vector2( 564, 438 )
scale = Vector2( 20, 20 )
texture = ExtResource( 14 )

[node name="Retry" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.0
margin_top = -234.0
margin_right = -134.0
margin_bottom = -218.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 1 )
text = "Retry"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = 186.0
margin_right = -26.0
margin_bottom = 202.0
rect_scale = Vector2( 2.4, 2.4 )
custom_fonts/font = ExtResource( 1 )
text = "Ok"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Ok"]
self_modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = 50.0
margin_top = -5.0
margin_right = 62.0
margin_bottom = 15.0
rect_scale = Vector2( 3.4, 1.21667 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -30.0
margin_right = 192.0
margin_bottom = 98.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Score" type="Label" parent="Player1"]
margin_left = -60.0
margin_top = 105.0
margin_right = 68.0
margin_bottom = 137.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 1 )
text = "69"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Player1"]
margin_left = -7.5
margin_top = 165.0
margin_right = 120.5
margin_bottom = 197.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -30.0
margin_right = -54.0
margin_bottom = 98.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Score" type="Label" parent="Player2"]
margin_left = -60.0
margin_top = 105.0
margin_right = 68.0
margin_bottom = 137.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 1 )
text = "69"
align = 1
valign = 1

[node name="Score" type="Label" parent="Player2"]
margin_left = -7.5
margin_top = 165.0
margin_right = 120.5
margin_bottom = 197.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crown" type="TextureRect" parent="."]
margin_left = 558.0
margin_top = 348.0
margin_right = 686.0
margin_bottom = 476.0
rect_scale = Vector2( 0.7, 0.6 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevName" type="Label" parent="."]
modulate = Color( 0.854902, 0.854902, 0.854902, 0.74902 )
margin_left = 24.0
margin_top = 852.0
margin_right = 168.0
margin_bottom = 884.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 1 )
text = "DanMan980"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -1.9

[node name="Information" type="Sprite" parent="."]
position = Vector2( 918, 240 )
texture = ExtResource( 11 )
offset = Vector2( 234, -186 )

[node name="Button" type="Button" parent="Information"]
modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = 216.0
margin_top = -210.0
margin_right = 228.0
margin_bottom = -190.0
rect_scale = Vector2( 3.16, 2.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Information"]
visible = false
margin_left = 54.0
margin_top = -198.0
margin_right = 182.0
margin_bottom = -166.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Info"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicOff" type="Sprite" parent="."]
position = Vector2( 1152, 186 )
texture = ExtResource( 10 )

[node name="Button" type="Button" parent="MusicOff"]
modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = -24.0
margin_top = -30.0
margin_right = -12.0
margin_bottom = -10.0
rect_scale = Vector2( 4, 2.96 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="MusicOff"]
visible = false
margin_left = -168.0
margin_top = -12.0
margin_right = -40.0
margin_bottom = 20.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Music"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gamepad" type="Sprite" parent="."]
position = Vector2( 1248, 390 )
texture = ExtResource( 13 )
offset = Vector2( -96, -54 )

[node name="Button" type="Button" parent="Gamepad"]
modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = -60.0
margin_top = -78.0
margin_right = -48.0
margin_bottom = -58.0
rect_rotation = 90.0
rect_scale = Vector2( 4.4, 3.84 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Gamepad"]
visible = false
margin_left = -276.0
margin_top = -66.0
margin_right = -148.0
margin_bottom = -34.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Controls"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioOff" type="AnimatedSprite" parent="."]
position = Vector2( 1158, 258 )
frames = SubResource( 54 )
animation = "On"

[node name="Button" type="Button" parent="AudioOff"]
modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = -30.0
margin_top = -30.0
margin_right = -18.0
margin_bottom = -10.0
rect_scale = Vector2( 3.95999, 2.84 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="AudioOff"]
visible = false
margin_left = -168.0
margin_top = -12.0
margin_right = -40.0
margin_bottom = 20.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Sfx"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" parent="." instance=ExtResource( 20 )]
visible = false

[node name="Controls" parent="." instance=ExtResource( 22 )]
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -9.0
pitch_scale = 0.9
autoplay = true

[node name="Node2D" type="Node2D" parent="."]
modulate = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[connection signal="finished" from="Blip" to="." method="_on_Blip_finished"]
